--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-colorthief
-beautifulsoup4
-Pillow
-pytesseract
-numpy
-requests
-python-magic
-opencv-python
+beautifulsoup4==4.9.3
+colorthief==0.2.1
+fake-useragent==0.1.11
+numpy==1.19.5
+opencv-python-headless==4.5.1.48
+Pillow==8.1.0
+pytesseract==0.3.7
+python-magic==0.4.22
+requests==2.25.1
+rich==9.13.0
+tensorflow==2.4.1
