--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,60 @@
-absl-py==2.0.0
-astunparse==1.6.3
-beautifulsoup4==4.12.2
-cachetools==5.3.2
-certifi==2024.7.4
-charset-normalizer==3.3.2
-coloredlogs==15.0.1
-colorthief==0.2.1
-fake-useragent==1.4.0
-flatbuffers==23.5.26
-gast==0.4.0
-google-auth==2.26.2
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-grpcio==1.60.0
-h5py==3.10.0
-humanfriendly==10.0
-idna==3.7
-importlib-metadata==7.0.1
-importlib-resources==6.1.1
-keras==2.13.1
-libclang==16.0.6
-Markdown==3.5.2
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-mdurl==0.1.2
-mpmath==1.3.0
-nudenet==3.0.8
-numpy==1.24.3
-oauthlib==3.2.2
-onnxruntime==1.16.3
-opencv-python-headless==4.9.0.80
-opt-einsum==3.3.0
-packaging==23.2
-pillow==10.3.0
-protobuf==4.25.2
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-Pygments==2.17.2
-pytesseract==0.3.10
-python-magic==0.4.27
-requests==2.32.0
-requests-oauthlib==1.3.1
-rich==13.7.0
-rsa==4.9
-six==1.16.0
-soupsieve==2.5
-sympy==1.12
-tensorboard==2.13.0
-tensorboard-data-server==0.7.2
-tensorflow==2.13.1
-tensorflow-estimator==2.13.0
-tensorflow-io-gcs-filesystem==0.34.0
-termcolor==2.4.0
-tesseract==0.1.3
-typing_extensions==4.5.0
-urllib3==2.2.2
-Werkzeug==3.0.3
-wrapt==1.16.0
-zipp==3.17.0
+absl-py
+astunparse
+beautifulsoup4
+cachetools
+certifi
+charset-normalizer
+coloredlogs
+colorthief
+fake-useragent
+flatbuffers
+gast
+google-auth
+google-auth-oauthlib
+google-pasta
+grpcio
+h5py
+humanfriendly
+idna
+importlib-metadata
+importlib-resources
+keras
+libclang
+Markdown
+markdown-it-py
+MarkupSafe
+mdurl
+mpmath
+nudenet
+numpy
+oauthlib
+onnxruntime
+opencv-python-headless
+opt-einsum
+packaging
+pillow
+protobuf
+pyasn1
+pyasn1-modules
+Pygments
+pytesseract
+python-magic
+requests
+requests-oauthlib
+rich
+rsa
+six
+soupsieve
+sympy
+tensorboard
+tensorboard-data-server
+tensorflow
+tensorflow-estimator
+tensorflow-io-gcs-filesystem
+termcolor
+tesseract
+typing_extensions
+urllib3
+Werkzeug
+wrapt
+zipp
