--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+results.csv
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -161,3 +163,4 @@ cython_debug/
 
 .vscode/
 .*~
+.aider*
